--- a/Views/userViews/profile.hbs
+++ b/Views/userViews/profile.hbs
@@ -388,7 +388,7 @@
                                 ters andits detractors.</p>
                                 <br> --}}
                                 <div class="button-group-area mt-10">
-				                    <a href="#" class="genric-btn primary-border circle">Edit</a>
+				                    <a href="/editProfile" class="genric-btn primary-border circle">Edit</a>
 			                    </div>
                             <div class="br"></div>
                         </aside>
