--- a/Views/adminViews/updateProduct.hbs
+++ b/Views/adminViews/updateProduct.hbs
@@ -183,8 +183,13 @@
                       </div>
                       <br>
                         <div class="form-group">
-                            <label for="productImage">Product Image:</label>
-                            <input type="file" class="form-control" name="image" id="image">
+                            <label for="productImage">Product Main Image:</label>
+                            <input type="file" class="form-control" name="image1" id="image"> 
+                        </div>
+                        <br> 
+                        <div class="form-group">
+                            <label for="productImage">Product Sub Images:</label>
+                            <input type="file" class="form-control" required multiple name="image2" id="image"> 
                         </div>
                       <div class="form-group">
                         <label for="exampleTextarea1">Description</label>
