--- a/Views/userViews/editProfile.hbs
+++ b/Views/userViews/editProfile.hbs
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>ProGear</title>
+    <title>Karma Shop</title>
 
     <!--
             CSS
@@ -64,7 +64,7 @@
 							<li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
-							<li class="nav-item"><a href="/cart" class="cart"><span class="ti-bag"></span></a></li>
+							<li class="nav-item"><a href="#" class="cart"><span class="ti-bag"></span></a></li>
 							<li class="nav-item">
 								<button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
 							</li>
@@ -90,10 +90,10 @@
         <div class="container">
             <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
                 <div class="col-first">
-                    <h1>Shopping Cart</h1>
+                    <h1>Edit Profile</h1>
                     <nav class="d-flex align-items-center">
                         <a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-                        <a href="category.html">Cart</a>
+                        <a href="category.html">edit Proflie</a>
                     </nav>
                 </div>
             </div>
@@ -101,102 +101,40 @@
     </section>
     <!-- End Banner Area -->
 
-    <!--================Cart Area =================-->
-    <section class="cart_area">
+    <!--================Tracking Box Area =================-->
+    <section class="tracking_box_area section_gap">
         <div class="container">
-            <div class="cart_inner">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">Product</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        {{!-- {{#let total = 0}} --}}
-                   
-{{!-- {{> initTotal (set total 0)}} --}}
-
-  {{#each cart}}
-{{!-- {{#with (toFixed (mult quantity product.price) 2) as |sub|}}
-     {{#with (parseFloat sub) as |subFloat|}}
-       {{#with (toFixed (sum total subFloat) 2) as |totalSum|}} --}}
-          <tr>
-            <td>
-              <div class="media">
-                <div class="d-flex">
-                  <img src="../product-images/{{this.product.image.[0]}}" alt="" style="height: 100px; width: 100px">
-                </div>
-                <div class="media-body">
-                  <p>{{this.product.name}}</p>
-                </div>
-              </div>
-            </td>
-            <td>
-              <h5>&#8377;{{this.product.price}}</h5>
-            </td>
-            <td>
-              <div class="product_count">
-                <input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                <button onclick="var result = document.getElementById('sst'); var sst = result.value; if(!isNaN(sst)) result.value++; return false;" class="increase items-count" type="button"><i class="lnr lnr-chevron-up"></i></button>
-                <button onclick="var result = document.getElementById('sst'); var sst = result.value; if(!isNaN(sst) && sst > 0) result.value--; return false;" class="reduced items-count" type="button"><i class="lnr lnr-chevron-down"></i></button>
-              </div>
-            </td>
-            <td>
-              <h5>&#8377;{{this.product.price }}</h5>
-            </td>
-            <td>
-              <a href="/removeFromCart?id={{this.product._id}}"><input type="submit" class="close text-dark" value="&times;"></a>
-            </td>
-          </tr>
-        {{!-- {{/with}}
-      {{/with}}
-    {{/with}} --}}
-  {{/each}}
-
-  <tr>
-    <td></td>
-    <td></td>
-    <td>
-      <h5>Subtotal</h5>
-    </td>
-    <td>
-      <h5>&#8377;{{totalSum}}</h5>
-    </td>
-    <td></td>
-  </tr>
-{{!-- {{/let}} --}}
-
-                           <tr class="shipping_area">
-                            <tr class="out_button_area">
-                                <td>
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-                                </td>
-                                <td>
-                                    <div class="checkout_btn_inner d-flex align-items-center">
-                                        <a class="gray_btn" href="/">Continue Shopping</a>
-                                        
-                                        <a class="primary-btn" href="/checkout">Proceed to checkout</a>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="tracking_box_inner">
+                {{!-- <p>To track your order please enter your Order ID in the box below and press the "Track" button. This
+                    was given to you on your receipt and in the confirmation email you should have received.</p> --}}
+                <form class="row tracking_form" action="#" method="post" novalidate="novalidate">
+                    <div class="col-md-12 form-group">
+                        <label>First Name</label>
+                        <input type="text" class="form-control" id="fname" name="fname"  value="{{userdata.fname}}">
+                    </div>
+                    <div class="col-md-12 form-group">
+                        <label>Last Name</label>
+                        <input type="text" class="form-control" id="lname" name="lname"  value="{{userdata.lname}}">
+                    </div>
+                    <div class="col-md-12 form-group">
+                        <label>E-mail</label>
+                        <input type="email" class="form-control" id="email" name="email"  value="{{userdata.email}}">
+                    </div>
+                    <div class="col-md-12 form-group">
+                        <label>Phone Number</label>
+                        <input type="number" class="form-control" id="number" name="number"  value="{{userdata.number}}">
+                    </div>
+                    <div class="col-md-12 form-group">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Billing Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Billing Email Address'">
+                    </div>
+                    <div class="col-md-12 form-group">
+                        <button type="submit" value="submit" class="primary-btn"> Save Changes</button>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
-    <!--================End Cart Area =================-->
+    <!--================End Tracking Box Area =================-->
 
     <!-- start footer Area -->
     <footer class="footer-area section_gap">
@@ -281,6 +219,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     </footer>
     <!-- End footer Area -->
 
+
+
+
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
 	 crossorigin="anonymous"></script>
@@ -298,7 +239,3 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 </body>
 
 </html>
-
-
-
-
